src/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for one or more positions</description>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar/Burma</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To check candidate is still working for current company or free</description>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <recordTypes>
        <fullName>IT_positions</fullName>
        <active>true</active>
        <description>Record type for all IT positions</description>
        <label>IT positions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Birthday</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR( TODAY() ) - YEAR( Birthday__c)  &lt; 16</errorConditionFormula>
        <errorMessage>Birthday less than 16 years old</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Rule</fullName>
        <active>true</active>
        <description>xxx@mulodo.com</description>
        <errorConditionFormula>AND(
 NOT(ISBLANK(Email__c)),
 NOT(REGEX( Email__c ,&quot;\\w([^@\\s,;]+)@(mulodo\\.com)&quot;))
)</errorConditionFormula>
        <errorMessage>Invalid email format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) &lt; 10 || LEN(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) &gt; 11  ||  NOT(ISNUMBER(SUBSTITUTE(Phone__c, &apos; &apos;, &apos;&apos;)) )</errorConditionFormula>
        <errorMessage>Incorrect phone number format</errorMessage>
    </validationRules>
</CustomObject>